; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_msa.c_ff_avg_h264_qpel16_mc20_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_h264qpel_msa.c_ff_avg_h264_qpel16_mc20_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@luma_mask_arr = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_avg_h264_qpel16_mc20_msa(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %45 = call i32 @__msa_ldi_b(i32 -5)
  store i32 %45, i32* %43, align 4
  %46 = call i32 @__msa_ldi_b(i32 20)
  store i32 %46, i32* %44, align 4
  %47 = load i32*, i32** @luma_mask_arr, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 0
  %49 = load i32, i32* %20, align 4
  %50 = load i32, i32* %21, align 4
  %51 = load i32, i32* %22, align 4
  %52 = call i32 @LD_SB3(i32* %48, i32 16, i32 %49, i32 %50, i32 %51)
  %53 = load i32*, i32** %5, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 -2
  store i32* %54, i32** %5, align 8
  store i32 4, i32* %7, align 4
  br label %55

55:                                               ; preds = %59, %3
  %56 = load i32, i32* %7, align 4
  %57 = add nsw i32 %56, -1
  store i32 %57, i32* %7, align 4
  %58 = icmp ne i32 %56, 0
  br i1 %58, label %59, label %350

59:                                               ; preds = %55
  %60 = load i32*, i32** %5, align 8
  %61 = load i32, i32* %12, align 4
  %62 = load i32, i32* %13, align 4
  %63 = call i32 @LD_SB2(i32* %60, i32 8, i32 %61, i32 %62)
  %64 = load i32, i32* %6, align 4
  %65 = load i32*, i32** %5, align 8
  %66 = sext i32 %64 to i64
  %67 = getelementptr inbounds i32, i32* %65, i64 %66
  store i32* %67, i32** %5, align 8
  %68 = load i32*, i32** %5, align 8
  %69 = load i32, i32* %14, align 4
  %70 = load i32, i32* %15, align 4
  %71 = call i32 @LD_SB2(i32* %68, i32 8, i32 %69, i32 %70)
  %72 = load i32, i32* %6, align 4
  %73 = load i32*, i32** %5, align 8
  %74 = sext i32 %72 to i64
  %75 = getelementptr inbounds i32, i32* %73, i64 %74
  store i32* %75, i32** %5, align 8
  %76 = load i32*, i32** %5, align 8
  %77 = load i32, i32* %16, align 4
  %78 = load i32, i32* %17, align 4
  %79 = call i32 @LD_SB2(i32* %76, i32 8, i32 %77, i32 %78)
  %80 = load i32, i32* %6, align 4
  %81 = load i32*, i32** %5, align 8
  %82 = sext i32 %80 to i64
  %83 = getelementptr inbounds i32, i32* %81, i64 %82
  store i32* %83, i32** %5, align 8
  %84 = load i32*, i32** %5, align 8
  %85 = load i32, i32* %18, align 4
  %86 = load i32, i32* %19, align 4
  %87 = call i32 @LD_SB2(i32* %84, i32 8, i32 %85, i32 %86)
  %88 = load i32, i32* %6, align 4
  %89 = load i32*, i32** %5, align 8
  %90 = sext i32 %88 to i64
  %91 = getelementptr inbounds i32, i32* %89, i64 %90
  store i32* %91, i32** %5, align 8
  %92 = load i32*, i32** %4, align 8
  %93 = load i32, i32* %6, align 4
  %94 = load i32, i32* %8, align 4
  %95 = load i32, i32* %9, align 4
  %96 = load i32, i32* %10, align 4
  %97 = load i32, i32* %11, align 4
  %98 = call i32 @LD_UB4(i32* %92, i32 %93, i32 %94, i32 %95, i32 %96, i32 %97)
  %99 = load i32, i32* %12, align 4
  %100 = load i32, i32* %13, align 4
  %101 = load i32, i32* %14, align 4
  %102 = load i32, i32* %15, align 4
  %103 = load i32, i32* %16, align 4
  %104 = load i32, i32* %17, align 4
  %105 = load i32, i32* %18, align 4
  %106 = load i32, i32* %19, align 4
  %107 = call i32 @XORI_B8_128_SB(i32 %99, i32 %100, i32 %101, i32 %102, i32 %103, i32 %104, i32 %105, i32 %106)
  %108 = load i32, i32* %12, align 4
  %109 = load i32, i32* %12, align 4
  %110 = load i32, i32* %13, align 4
  %111 = load i32, i32* %13, align 4
  %112 = load i32, i32* %20, align 4
  %113 = load i32, i32* %20, align 4
  %114 = load i32, i32* %23, align 4
  %115 = load i32, i32* %26, align 4
  %116 = call i32 @VSHF_B2_SB(i32 %108, i32 %109, i32 %110, i32 %111, i32 %112, i32 %113, i32 %114, i32 %115)
  %117 = load i32, i32* %14, align 4
  %118 = load i32, i32* %14, align 4
  %119 = load i32, i32* %15, align 4
  %120 = load i32, i32* %15, align 4
  %121 = load i32, i32* %20, align 4
  %122 = load i32, i32* %20, align 4
  %123 = load i32, i32* %29, align 4
  %124 = load i32, i32* %32, align 4
  %125 = call i32 @VSHF_B2_SB(i32 %117, i32 %118, i32 %119, i32 %120, i32 %121, i32 %122, i32 %123, i32 %124)
  %126 = load i32, i32* %12, align 4
  %127 = load i32, i32* %12, align 4
  %128 = load i32, i32* %13, align 4
  %129 = load i32, i32* %13, align 4
  %130 = load i32, i32* %21, align 4
  %131 = load i32, i32* %21, align 4
  %132 = load i32, i32* %24, align 4
  %133 = load i32, i32* %27, align 4
  %134 = call i32 @VSHF_B2_SB(i32 %126, i32 %127, i32 %128, i32 %129, i32 %130, i32 %131, i32 %132, i32 %133)
  %135 = load i32, i32* %14, align 4
  %136 = load i32, i32* %14, align 4
  %137 = load i32, i32* %15, align 4
  %138 = load i32, i32* %15, align 4
  %139 = load i32, i32* %21, align 4
  %140 = load i32, i32* %21, align 4
  %141 = load i32, i32* %30, align 4
  %142 = load i32, i32* %33, align 4
  %143 = call i32 @VSHF_B2_SB(i32 %135, i32 %136, i32 %137, i32 %138, i32 %139, i32 %140, i32 %141, i32 %142)
  %144 = load i32, i32* %12, align 4
  %145 = load i32, i32* %12, align 4
  %146 = load i32, i32* %13, align 4
  %147 = load i32, i32* %13, align 4
  %148 = load i32, i32* %22, align 4
  %149 = load i32, i32* %22, align 4
  %150 = load i32, i32* %25, align 4
  %151 = load i32, i32* %28, align 4
  %152 = call i32 @VSHF_B2_SB(i32 %144, i32 %145, i32 %146, i32 %147, i32 %148, i32 %149, i32 %150, i32 %151)
  %153 = load i32, i32* %14, align 4
  %154 = load i32, i32* %14, align 4
  %155 = load i32, i32* %15, align 4
  %156 = load i32, i32* %15, align 4
  %157 = load i32, i32* %22, align 4
  %158 = load i32, i32* %22, align 4
  %159 = load i32, i32* %31, align 4
  %160 = load i32, i32* %34, align 4
  %161 = call i32 @VSHF_B2_SB(i32 %153, i32 %154, i32 %155, i32 %156, i32 %157, i32 %158, i32 %159, i32 %160)
  %162 = load i32, i32* %23, align 4
  %163 = load i32, i32* %26, align 4
  %164 = load i32, i32* %29, align 4
  %165 = load i32, i32* %32, align 4
  %166 = load i32, i32* %35, align 4
  %167 = load i32, i32* %36, align 4
  %168 = load i32, i32* %37, align 4
  %169 = load i32, i32* %38, align 4
  %170 = call i32 @HADD_SB4_SH(i32 %162, i32 %163, i32 %164, i32 %165, i32 %166, i32 %167, i32 %168, i32 %169)
  %171 = load i32, i32* %24, align 4
  %172 = load i32, i32* %27, align 4
  %173 = load i32, i32* %30, align 4
  %174 = load i32, i32* %33, align 4
  %175 = load i32, i32* %43, align 4
  %176 = load i32, i32* %43, align 4
  %177 = load i32, i32* %43, align 4
  %178 = load i32, i32* %43, align 4
  %179 = load i32, i32* %35, align 4
  %180 = load i32, i32* %36, align 4
  %181 = load i32, i32* %37, align 4
  %182 = load i32, i32* %38, align 4
  %183 = call i32 @DPADD_SB4_SH(i32 %171, i32 %172, i32 %173, i32 %174, i32 %175, i32 %176, i32 %177, i32 %178, i32 %179, i32 %180, i32 %181, i32 %182)
  %184 = load i32, i32* %25, align 4
  %185 = load i32, i32* %28, align 4
  %186 = load i32, i32* %31, align 4
  %187 = load i32, i32* %34, align 4
  %188 = load i32, i32* %44, align 4
  %189 = load i32, i32* %44, align 4
  %190 = load i32, i32* %44, align 4
  %191 = load i32, i32* %44, align 4
  %192 = load i32, i32* %35, align 4
  %193 = load i32, i32* %36, align 4
  %194 = load i32, i32* %37, align 4
  %195 = load i32, i32* %38, align 4
  %196 = call i32 @DPADD_SB4_SH(i32 %184, i32 %185, i32 %186, i32 %187, i32 %188, i32 %189, i32 %190, i32 %191, i32 %192, i32 %193, i32 %194, i32 %195)
  %197 = load i32, i32* %16, align 4
  %198 = load i32, i32* %16, align 4
  %199 = load i32, i32* %17, align 4
  %200 = load i32, i32* %17, align 4
  %201 = load i32, i32* %20, align 4
  %202 = load i32, i32* %20, align 4
  %203 = load i32, i32* %23, align 4
  %204 = load i32, i32* %26, align 4
  %205 = call i32 @VSHF_B2_SB(i32 %197, i32 %198, i32 %199, i32 %200, i32 %201, i32 %202, i32 %203, i32 %204)
  %206 = load i32, i32* %18, align 4
  %207 = load i32, i32* %18, align 4
  %208 = load i32, i32* %19, align 4
  %209 = load i32, i32* %19, align 4
  %210 = load i32, i32* %20, align 4
  %211 = load i32, i32* %20, align 4
  %212 = load i32, i32* %29, align 4
  %213 = load i32, i32* %32, align 4
  %214 = call i32 @VSHF_B2_SB(i32 %206, i32 %207, i32 %208, i32 %209, i32 %210, i32 %211, i32 %212, i32 %213)
  %215 = load i32, i32* %16, align 4
  %216 = load i32, i32* %16, align 4
  %217 = load i32, i32* %17, align 4
  %218 = load i32, i32* %17, align 4
  %219 = load i32, i32* %21, align 4
  %220 = load i32, i32* %21, align 4
  %221 = load i32, i32* %24, align 4
  %222 = load i32, i32* %27, align 4
  %223 = call i32 @VSHF_B2_SB(i32 %215, i32 %216, i32 %217, i32 %218, i32 %219, i32 %220, i32 %221, i32 %222)
  %224 = load i32, i32* %18, align 4
  %225 = load i32, i32* %18, align 4
  %226 = load i32, i32* %19, align 4
  %227 = load i32, i32* %19, align 4
  %228 = load i32, i32* %21, align 4
  %229 = load i32, i32* %21, align 4
  %230 = load i32, i32* %30, align 4
  %231 = load i32, i32* %33, align 4
  %232 = call i32 @VSHF_B2_SB(i32 %224, i32 %225, i32 %226, i32 %227, i32 %228, i32 %229, i32 %230, i32 %231)
  %233 = load i32, i32* %16, align 4
  %234 = load i32, i32* %16, align 4
  %235 = load i32, i32* %17, align 4
  %236 = load i32, i32* %17, align 4
  %237 = load i32, i32* %22, align 4
  %238 = load i32, i32* %22, align 4
  %239 = load i32, i32* %25, align 4
  %240 = load i32, i32* %28, align 4
  %241 = call i32 @VSHF_B2_SB(i32 %233, i32 %234, i32 %235, i32 %236, i32 %237, i32 %238, i32 %239, i32 %240)
  %242 = load i32, i32* %18, align 4
  %243 = load i32, i32* %18, align 4
  %244 = load i32, i32* %19, align 4
  %245 = load i32, i32* %19, align 4
  %246 = load i32, i32* %22, align 4
  %247 = load i32, i32* %22, align 4
  %248 = load i32, i32* %31, align 4
  %249 = load i32, i32* %34, align 4
  %250 = call i32 @VSHF_B2_SB(i32 %242, i32 %243, i32 %244, i32 %245, i32 %246, i32 %247, i32 %248, i32 %249)
  %251 = load i32, i32* %23, align 4
  %252 = load i32, i32* %26, align 4
  %253 = load i32, i32* %29, align 4
  %254 = load i32, i32* %32, align 4
  %255 = load i32, i32* %39, align 4
  %256 = load i32, i32* %40, align 4
  %257 = load i32, i32* %41, align 4
  %258 = load i32, i32* %42, align 4
  %259 = call i32 @HADD_SB4_SH(i32 %251, i32 %252, i32 %253, i32 %254, i32 %255, i32 %256, i32 %257, i32 %258)
  %260 = load i32, i32* %24, align 4
  %261 = load i32, i32* %27, align 4
  %262 = load i32, i32* %30, align 4
  %263 = load i32, i32* %33, align 4
  %264 = load i32, i32* %43, align 4
  %265 = load i32, i32* %43, align 4
  %266 = load i32, i32* %43, align 4
  %267 = load i32, i32* %43, align 4
  %268 = load i32, i32* %39, align 4
  %269 = load i32, i32* %40, align 4
  %270 = load i32, i32* %41, align 4
  %271 = load i32, i32* %42, align 4
  %272 = call i32 @DPADD_SB4_SH(i32 %260, i32 %261, i32 %262, i32 %263, i32 %264, i32 %265, i32 %266, i32 %267, i32 %268, i32 %269, i32 %270, i32 %271)
  %273 = load i32, i32* %25, align 4
  %274 = load i32, i32* %28, align 4
  %275 = load i32, i32* %31, align 4
  %276 = load i32, i32* %34, align 4
  %277 = load i32, i32* %44, align 4
  %278 = load i32, i32* %44, align 4
  %279 = load i32, i32* %44, align 4
  %280 = load i32, i32* %44, align 4
  %281 = load i32, i32* %39, align 4
  %282 = load i32, i32* %40, align 4
  %283 = load i32, i32* %41, align 4
  %284 = load i32, i32* %42, align 4
  %285 = call i32 @DPADD_SB4_SH(i32 %273, i32 %274, i32 %275, i32 %276, i32 %277, i32 %278, i32 %279, i32 %280, i32 %281, i32 %282, i32 %283, i32 %284)
  %286 = load i32, i32* %35, align 4
  %287 = load i32, i32* %36, align 4
  %288 = load i32, i32* %37, align 4
  %289 = load i32, i32* %38, align 4
  %290 = call i32 @SRARI_H4_SH(i32 %286, i32 %287, i32 %288, i32 %289, i32 5)
  %291 = load i32, i32* %39, align 4
  %292 = load i32, i32* %40, align 4
  %293 = load i32, i32* %41, align 4
  %294 = load i32, i32* %42, align 4
  %295 = call i32 @SRARI_H4_SH(i32 %291, i32 %292, i32 %293, i32 %294, i32 5)
  %296 = load i32, i32* %35, align 4
  %297 = load i32, i32* %36, align 4
  %298 = load i32, i32* %37, align 4
  %299 = load i32, i32* %38, align 4
  %300 = call i32 @SAT_SH4_SH(i32 %296, i32 %297, i32 %298, i32 %299, i32 7)
  %301 = load i32, i32* %39, align 4
  %302 = load i32, i32* %40, align 4
  %303 = load i32, i32* %41, align 4
  %304 = load i32, i32* %42, align 4
  %305 = call i32 @SAT_SH4_SH(i32 %301, i32 %302, i32 %303, i32 %304, i32 7)
  %306 = load i32, i32* %36, align 4
  %307 = load i32, i32* %35, align 4
  %308 = load i32, i32* %38, align 4
  %309 = load i32, i32* %37, align 4
  %310 = load i32, i32* %40, align 4
  %311 = load i32, i32* %39, align 4
  %312 = load i32, i32* %42, align 4
  %313 = load i32, i32* %41, align 4
  %314 = load i32, i32* %23, align 4
  %315 = load i32, i32* %24, align 4
  %316 = load i32, i32* %25, align 4
  %317 = load i32, i32* %26, align 4
  %318 = call i32 @PCKEV_B4_SB(i32 %306, i32 %307, i32 %308, i32 %309, i32 %310, i32 %311, i32 %312, i32 %313, i32 %314, i32 %315, i32 %316, i32 %317)
  %319 = load i32, i32* %23, align 4
  %320 = load i32, i32* %24, align 4
  %321 = load i32, i32* %25, align 4
  %322 = load i32, i32* %26, align 4
  %323 = call i32 @XORI_B4_128_SB(i32 %319, i32 %320, i32 %321, i32 %322)
  %324 = load i32, i32* %23, align 4
  %325 = load i32, i32* %8, align 4
  %326 = load i32, i32* %24, align 4
  %327 = load i32, i32* %9, align 4
  %328 = load i32, i32* %8, align 4
  %329 = load i32, i32* %9, align 4
  %330 = call i32 @AVER_UB2_UB(i32 %324, i32 %325, i32 %326, i32 %327, i32 %328, i32 %329)
  %331 = load i32, i32* %25, align 4
  %332 = load i32, i32* %10, align 4
  %333 = load i32, i32* %26, align 4
  %334 = load i32, i32* %11, align 4
  %335 = load i32, i32* %10, align 4
  %336 = load i32, i32* %11, align 4
  %337 = call i32 @AVER_UB2_UB(i32 %331, i32 %332, i32 %333, i32 %334, i32 %335, i32 %336)
  %338 = load i32, i32* %8, align 4
  %339 = load i32, i32* %9, align 4
  %340 = load i32, i32* %10, align 4
  %341 = load i32, i32* %11, align 4
  %342 = load i32*, i32** %4, align 8
  %343 = load i32, i32* %6, align 4
  %344 = call i32 @ST_UB4(i32 %338, i32 %339, i32 %340, i32 %341, i32* %342, i32 %343)
  %345 = load i32, i32* %6, align 4
  %346 = mul nsw i32 4, %345
  %347 = load i32*, i32** %4, align 8
  %348 = sext i32 %346 to i64
  %349 = getelementptr inbounds i32, i32* %347, i64 %348
  store i32* %349, i32** %4, align 8
  br label %55

350:                                              ; preds = %55
  ret void
}

declare dso_local i32 @__msa_ldi_b(i32) #1

declare dso_local i32 @LD_SB3(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB2(i32*, i32, i32, i32) #1

declare dso_local i32 @LD_UB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B8_128_SB(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @VSHF_B2_SB(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @HADD_SB4_SH(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @DPADD_SB4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @AVER_UB2_UB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ST_UB4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
